feat: translate site to English, remove .cz domain references

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="cs">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -13,9 +13,9 @@
     <div class="container">
       <a class="logo" href="#">AI<span>Labs</span></a>
       <nav class="nav">
-        <a href="#about">O nás</a>
-        <a href="#visions">Vize</a>
-        <a href="#contact">Kontakt</a>
+        <a href="#about">About</a>
+        <a href="#visions">Visions</a>
+        <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
@@ -27,8 +27,8 @@
           <h1>Future is comming ...</h1>
           <p class="tag">Dark, nerdy, and unapologetically speculative — exploring the near future of artificial intelligence.</p>
           <div class="hero-cta">
-            <a class="btn primary" href="#visions">Podívat se</a>
-            <a class="btn ghost" href="#about">Zjistit víc</a>
+            <a class="btn primary" href="#visions">Explore</a>
+            <a class="btn ghost" href="#about">Learn More</a>
           </div>
         </div>
         <div class="hero-art" aria-hidden="true">
@@ -54,19 +54,19 @@
 
     <section id="visions" class="section">
       <div class="container">
-        <h2>Vize budoucnosti AI</h2>
+        <h2>Future of AI</h2>
         <div class="cards">
           <article class="card">
-            <h3>Autonomie</h3>
-            <p>Systémy, které učí a plánují samostatně — etika a kontrola jsou klíčové.</p>
+            <h3>Autonomy</h3>
+            <p>Systems that learn and plan independently — ethics and oversight are key.</p>
           </article>
           <article class="card">
-            <h3>Spolupráce</h3>
-            <p>AI jako partner: augmentace lidské kreativity a rozhodování.</p>
+            <h3>Collaboration</h3>
+            <p>AI as a partner: augmenting human creativity and decision-making.</p>
           </article>
           <article class="card">
-            <h3>Zabezpečení</h3>
-            <p>Robustní modely a transparentní procesy jsou nutností pro důvěru.</p>
+            <h3>Security</h3>
+            <p>Robust models and transparent processes are essential for trust.</p>
           </article>
         </div>
       </div>
@@ -74,20 +74,20 @@
 
     <section id="about" class="section alt">
       <div class="container">
-        <h2>O projektu</h2>
-        <p>Tato stránka je konceptem vizuálního a informačního centra o blízké budoucnosti AI. Vše navrženo s tmavým, nerdovským stylem.</p>
+        <h2>About This Project</h2>
+        <p>A dark, nerdy exploration of the near future of artificial intelligence. This site serves as a visual and informational hub for speculative AI futures.</p>
       </div>
     </section>
 
     <section id="contact" class="section">
       <div class="container contact-grid">
         <div>
-          <h3>Chceš spolupracovat?</h3>
-          <p>Napiš nám: <a href="mailto:hello@example.com">hello@example.com</a></p>
+          <h3>Want to Collaborate?</h3>
+          <p>Reach out: <a href="mailto:hello@example.com">hello@example.com</a></p>
         </div>
-        <form class="contact-form" onsubmit="event.preventDefault(); alert('Díky — demo odeslání');">
-          <input type="email" placeholder="tvůj@email.cz" required>
-          <button class="btn primary" type="submit">Odeslat</button>
+        <form class="contact-form" onsubmit="event.preventDefault(); alert('Thanks — demo submission.');">
+          <input type="email" placeholder="your@email.com" required>
+          <button class="btn primary" type="submit">Send</button>
         </form>
       </div>
     </section>
@@ -95,7 +95,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>© 2025 AI Labs — Experimentální obsah</small>
+      <small>© 2025 AI Labs — Experimental content</small>
       <div class="credits">Made with <span class="heart">❤</span> and a lot of coffee</div>
     </div>
   </footer>
