feat: add starfield parallax animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <canvas id="starfield-canvas" class="starfield-canvas"></canvas>
   <div class="bg-grid"></div>
   <header class="site-header">
     <div class="container">
@@ -100,6 +101,7 @@
     </div>
   </footer>
 
+  <script src="starfield.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
