fix: add 'The' to H1 heading and clean up README

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>Future is coming ...</h1>
+          <h1>The future is coming ...</h1>
           <p class="tag">Dark, nerdy, and unapologetically speculative — exploring the near future of artificial intelligence.</p>
           <div class="hero-cta">
             <a class="btn primary" href="#visions">Explore</a>
